View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025376 | Open CASCADE | OCCT:Modeling Algorithms | public | 2014-10-15 11:39 | 2014-11-12 09:54 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025376: Inconsistence between function and derivatives evaluation in Extrema_GlobOptFuncCS. | ||||
Description | In "value" function distance is computed, but in "gradient" and "hessian" computed for "square distance". It is necessary to use one approach: "distance" or "square distance" everywhere in Extrema_GlobOptFuncCS. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25376 has been created by aml. SHA-1: e7455d061a22944ede09e1a55cfe783228594cea Detailed log of new commits: Author: aml Date: Wed Oct 15 11:44:53 2014 +0400 0025376: Inconsistence between function and derivatives evaluation in Extrema_GlobOptFuncCS. Changed "value" function behavior in Extrema/Extrema_GlobOptFuncCS.cxx. Now it compute square distance between point on curve and point on surface. |
|
Dear abv, Please check current state of branch CR25376. |
|
Branch CR25376 has been updated forcibly by aml. SHA-1: 1a603670ac51763d9a2162e65466dcf2c6dd7211 |
|
Branch CR25376 has been updated forcibly by aml. SHA-1: 70dfb662959390a7c29e8a741a5628c5eca68516 |
|
No remarks, please test |
|
Branch CR25376 has been updated forcibly by mkv. SHA-1: 86405f66e9e77f4dff2046be33dfdca790001430 |
|
Dear BugMaster, Branch CR25376 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 86405f66e9e77f4dff2046be33dfdca790001430 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) MacOS: 199 (199 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 368801972 / 368944548 Total CPU difference: 46382.69999999994 / 44655.91000000001 products component : Total MEMORY difference: 125005188 / 125190500 Total CPU difference: 16779.709999999974 / 17166.429999999975 Testing on Windows: occt component : Total MEMORY difference: 253883176 / 252953496 Total CPU difference: 41862.046875 / 34935.15625 products component : Total MEMORY difference: 71721948 / 70188468 Total CPU difference: 12216.421875 / 11249.375 There are no differences in images found by testdiff. |
|
Branch CR25376 has been deleted by inv. SHA-1: 86405f66e9e77f4dff2046be33dfdca790001430 |
occt: master f82a9555 2014-10-15 07:44:53
Committer: bugmaster Details Diff |
0025376: Inconsistence between function and derivatives evaluation in Extrema_GlobOptFuncCS. Changed "value" function behavior in Extrema/Extrema_GlobOptFuncCS.cxx. Now it compute square distance between point on curve and point on surface. Fixed description in Extrema_GlobOptFuncCC. |
Affected Issues 0025376 |
|
mod - src/Extrema/Extrema_GlobOptFuncCC.hxx | Diff File | ||
mod - src/Extrema/Extrema_GlobOptFuncCS.cxx | Diff File | ||
mod - src/Extrema/Extrema_GlobOptFuncCS.hxx | Diff File | ||
mod - src/math/math_PSO.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-10-15 11:39 |
|
New Issue | |
2014-10-15 11:39 |
|
Assigned To | => aml |
2014-10-15 11:47 | git | Note Added: 0033111 | |
2014-10-15 11:48 |
|
Note Added: 0033112 | |
2014-10-15 11:48 |
|
Assigned To | aml => abv |
2014-10-15 11:48 |
|
Status | new => resolved |
2014-10-15 13:40 | git | Note Added: 0033127 | |
2014-10-15 13:54 | git | Note Added: 0033130 | |
2014-10-16 21:21 |
|
Note Added: 0033234 | |
2014-10-16 21:21 |
|
Assigned To | abv => bugmaster |
2014-10-16 21:21 |
|
Status | resolved => reviewed |
2014-10-17 18:03 |
|
Assigned To | bugmaster => mkv |
2014-10-17 19:04 | git | Note Added: 0033286 | |
2014-10-20 20:33 |
|
Note Added: 0033355 | |
2014-10-20 20:33 |
|
Test case number | => Not needed |
2014-10-20 20:33 |
|
Assigned To | mkv => bugmaster |
2014-10-20 20:33 |
|
Status | reviewed => tested |
2014-10-24 15:38 | bugmaster | Changeset attached | => occt master f82a9555 |
2014-10-24 15:38 | bugmaster | Status | tested => verified |
2014-10-24 15:38 | bugmaster | Resolution | open => fixed |
2014-11-11 12:43 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 13:02 |
|
Status | verified => closed |
2014-11-12 09:54 | git | Note Added: 0034323 |