0025376: Inconsistence between function and derivatives evaluation in Extrema_GlobOptFuncCS.

Changed "value" function behavior in Extrema/Extrema_GlobOptFuncCS.cxx. Now it compute square distance between point on curve and point on surface.

Fixed description in Extrema_GlobOptFuncCC.